tests/derive/snapshots/tests__derive__related__multiple_related.snap
---
source: tests/derive/related.rs
expression: "render(Parent { children: vec![Child {}, Child {}] })"
---
× error: parent error
      × error: child error

      × error: child error
