tests/derive/snapshots/tests__derive__related__single_related.snap
---
source: tests/derive/related.rs
expression: "render(Parent { children: vec![Child {}] })"
---
× error: parent error
      × error: child error
